--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:Dawoodgghg@1@localhost:3306/scholarshipfolder_db?schema=public"
-DATABASE_URL="mysql://schola29_root:Dawoodgghg@123@localhost:3306/schola29_scholarshipfolder_db?schema=public"
+DATABASE_URL="mysql://root:Dawoodgghg@1@localhost:3306/scholarshipfolder_db?schema=public"
+# DATABASE_URL="mysql://schola29_root:Dawoodgghg@123@localhost:3306/schola29_scholarshipfolder_db?schema=public"
