--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="mysql://root:Dawoodgghg@1@localhost:3306/scholarshipfolder_db?schema=public"
 # DATABASE_URL="mysql://schola29_root:Dawoodgghg@123@localhost:3306/schola29_scholarshipfolder_db?schema=public"
+IMAGE_URL="localhost:9000"
+PORT=9000
