--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build": "rm -rf build && npx tsc",
     "start": "node build/src/index.js",
     "dev": "nodemon --exec npx ts-node src/index.ts",
     "seed": "npx ts-node src/db/seed.ts"
