--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "es2016",
     "module": "commonjs",
     "outDir": "./build",
+    "rootDir": "./src",
+    "baseUrl": "./src",
     "esModuleInterop": true,
 
     "forceConsistentCasingInFileNames": true,
