--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dawood Ahmed",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^6.19.0",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.8",
@@ -20,11 +21,11 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
